# ai-agents

./: Makefile  README.md  docker-compose.yml
backend/: Dockerfile  Makefile  README.md  alembic.ini  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250814_000001_init.py
backend/app/: main.py
backend/app/agents/: base.py  news.py  technical.py
backend/app/config/: prompts.yaml
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/domain/: types.py
backend/app/models/: agent.py
backend/app/orchestrator/: evolution.py
backend/app/routes/: agents.py  orchestrator.py  public.py
backend/app/schemas/: agent.py  stats.py
backend/app/services/: bybit.py  llm.py  logging_setup.py  news.py  prompt_loader.py  scheduler.py
frontend/: .eslintrc.cjs  .prettierrc.json  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AgentDetails.tsx  AgentList.tsx  RecentRuns.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Stats.tsx
