[tool.poetry]
name = "ai-agents-backend"
version = "0.1.0"
description = "AI agents orchestrator"
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
httpx = "^0.27.0"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
celery = "^5.4.0"
redis = "^5.0.7"
numpy = "^2.0.1"
pandas = "^2.2.2"
pandas-ta = "^0.3.14b0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


